<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activities.LoginActivity">

    <!-- Register progress -->
    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:src="@drawable/banner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.2"
        android:id="@+id/logo"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toBottomOf="parent">

            <GridLayout
                android:id="@+id/fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="2"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:hint="@string/prompt_email"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:layout_columnWeight="1"
                    android:imeOptions="actionNext"
                    android:theme="@style/EditTextStyle"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nickname"
                    android:hint="@string/nickname"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="text"
                    android:layout_columnWeight="1"
                    android:imeOptions="actionNext"
                    android:theme="@style/EditTextStyle"/>



                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:hint="@string/prompt_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_columnWeight="1"
                    android:theme="@style/EditTextStyle"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repeat_password"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_columnWeight="1"
                    android:imeOptions="actionDone"
                    android:theme="@style/EditTextStyle"/>

            </GridLayout>

            <TextView
                android:id="@+id/choose_avatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/choose_avatar"
                app:layout_constraintTop_toBottomOf="@id/fields"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/avatars"
        app:layout_constraintTop_toBottomOf="@id/choose_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@id/avatars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/registerBtn"
            android:text="@string/agreement" />

                <Button
                    android:id="@+id/registerBtn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/action_register"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:background="@drawable/bottom_border"/>

            </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>