...
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/registrationEndDesc" />

        <Button
            android:id="@+id/endBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
