...
                android:layout_marginLeft="17dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/title_background">

                <TextView
                    android:id="@+id/titleView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:paddingStart="10dp"
                    android:text="@string/prompt_login"
                    tools:ignore="RtlSymmetry" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/doubleSlash" />

            <TextView
                android:id="@+id/mapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/map" />
...
